fix issue with info widget alignment

--- a/src/app/framework/viz/dashboard/dashboard.module.css
+++ b/src/app/framework/viz/dashboard/dashboard.module.css
@@ -108,6 +108,16 @@
 .iconsWrapper{
   position: absolute;
   top: 2%;
+  right: 15px;
+  cursor: pointer;
+  opacity: 1;
+  z-index: 100;
+  display: flex;
+}
+
+.infoCardWrapper{
+  position: absolute;
+  top: 2%;
   right: 10px;
   cursor: pointer;
   opacity: 1;
